player zod schema added + small swagger fixes
